[package]
name = "graphics_rs"
version = "0.1.0"
authors = ["Adyel <adyel@live.com>"]
edition = "2018"


[[bin]]
name = "draw_rec"
path = "src/draw_rec.rs"

[[bin]]
name = "dda_line"
path = "src/dda_line.rs"

[[bin]]
name = "minifb"
path = "src/minifb.rs"

[[bin]]
name = "midpoint_line"
path = "src/midpoint_line.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.111.0"
log = "0.4.11"
simplelog = "0.8.0"
image = "0.23.8"